# lang-hs

./: .gitignore  CHANGELOG.md  Makefile  README.md  TODO  calc-hs.cabal  detailed-info+  todo.org
app/: AlexUserState.hs  Lexer.hs  Lexer.x  Main.hs  Parser.hs  Parser.y  ParserData.hs  StateMain.hs  SyntaxAnalysis.hs
doc/: docu.md  docu.out  docu.tex  reveal.html  reveal.org
test/: Main.hs
test/files/: bad_currification.tac  call_no_def_func.chs  call_no_def_func.tac  conditional.chs  conditional.tac  currification.chs  currification2.tac  currification_bad_func_type.chs  currification_bad_func_type.tac  more_arguments.chs  more_arguments.tac
test/files/ambits_programa/: inner_function.chs  inner_function.tac  local_variables.chs  local_variables.tac
test/files/arrays/: multidimensional.chs  multidimensional.tac  multidimensional_multipletypes.chs  multidimensional_multipletypes.tac  multiple_types.chs  multiple_types.tac  normal_array.chs  normal_array.tac
test/files/case_of/: case_of.chs  case_of.tac  case_of_no_comma.chs  case_of_no_comma.tac  case_of_no_curly.chs  case_of_no_curly.tac  case_of_no_def_type.chs  case_of_no_def_type.tac
test/files/conditional/: conditional.tac  conditional_no_bool_condition.chs  conditional_no_bool_condition.tac  conditional_no_else.chs  conditional_no_else.tac
test/files/data/: data.chs  data.tac  data_no_assign.chs  data_no_assign.tac  data_no_finish.chs  data_no_finish.tac  data_no_separator.chs  data_no_separator.tac
test/files/expresions/: boolean.chs  boolean.tac  char.chs  char.tac  int.chs  int.tac  real.chs  real.tac
test/files/for/: for.chs  for.tac  for_empty_array.chs  for_empty_array.tac  for_no_array.chs  for_no_fun.chs  for_no_fun.tac
test/files/functions/: bad_currification.chs  bad_currification.tac  call_func.chs  call_func.tac  call_no_def_func.tac  currification.tac  currification_bad_func_type.tac  func_parameter_not_used.chs  func_parameter_not_used.tac  more_arguments.tac  normal_func.chs  normal_func.tac
test/files/get_from/: get_from.chs  get_from.tac  get_from_empty_array.chs  get_from_empty_array.tac  get_from_no_array.chs  get_from_no_array.tac  get_from_no_int.chs  get_from_no_int.tac
test/files/map/: map.chs  map.tac  map_empty_array.chs  map_empty_array.tac  map_no_array.chs  map_no_array.tac  map_no_func.chs
test/files/repeat_until/: repeat_until.chs  repeat_until.tac  repeat_until_bad_condition.chs  repeat_until_bad_condition.tac  repeat_until_bad_func.chs  repeat_until_bad_func.tac
testfiles/: example1.ch  example2.ch
(+6 files in other folders)
